# Improving-matrix-vector-product

./: .gitignore  CMakeLists.txt  README.md
results/: performance_comparison.csv  results_block_tuning.csv  results_strong_scaling_blocked.csv  results_strong_scaling_naive.csv  results_weak_scaling_blocked.csv  results_weak_scaling_naive.csv
scripts/: assert.sh  perf.sh  perf_plot.py  plot.py  plot_enhanced_product.py  plot_naive_product.py  results.sh  run_enhanced.sh  run_naive.sh  strong_scaling.sh  strong_scaling_enhanced.sh  strong_scaling_naive.sh  tuning.sh  tuning_plot.py  weak_scaling.sh  weak_scaling_enhanced.sh  weak_scaling_naive.sh
src/: CMakeLists.txt  main.cpp  main_blocked.cpp  main_naive_left.cpp  main_naive_right.cpp
